--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -5809,7 +5809,8 @@ button.close {
   .navbar {
     position: absolute;
     right: 20px;
-    max-width: 600px; }
+    max-width: 600px;
+    background-color: transparent !important; }
     .navbar .container {
       max-width: 100%; } }
 .responsive-sprites {
@@ -6274,8 +6275,10 @@ body#adaptations, body.adaptation {
   body#adaptations hr, body.adaptation hr {
     border-color: #889e69;
     border-top-width: 1px; }
-  body#adaptations h1, body.adaptation h1 {
-    color: #465235; }
+  body#adaptations h1, body#adaptations h2, body.adaptation h1, body.adaptation h2 {
+    color: #3c7e43; }
+  body#adaptations .navbar, body.adaptation .navbar {
+    background-color: #3c7e43; }
 
 @media (min-width: 992px) {
   body#adaptations .container header {
@@ -6450,6 +6453,8 @@ body.adaptation .fluidbox__overlay {
 body#manifesto {
   background: #fcdfe0;
   color: #16445c; }
+  body#manifesto .navbar {
+    background-color: #FF8C92; }
   @media (min-width: 768px) {
     body#manifesto header.row {
       padding: 60px 0 30px 0; }
@@ -6495,9 +6500,8 @@ body#manifesto {
 body#home {
   background-color: #b8b840; }
   body#home .navbar {
-    margin-bottom: 0; }
-    body#home .navbar a:link, body#home .navbar a:visited {
-      background-color: #b8b840; }
+    margin-bottom: 0;
+    background-color: #B3a999; }
   body#home section {
     background-position: center;
     background-repeat: no-repeat;
@@ -6607,6 +6611,8 @@ html.skrollr body#home section#unlikelyobjects {
 body#about {
   background: #e0e5e6;
   color: #16445c; }
+  body#about .navbar {
+    background-color: #62b6c4; }
   @media (min-width: 768px) {
     body#about header.row {
       padding: 60px 0 30px 0; } }
