--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -3,17 +3,18 @@
 	font-size: $font-size-h3;
 	text-transform: lowercase;
 	border: none;
+	z-index: 5;
 	a.active:link, a.active:visited, a.active:hover, a.active:active {
 		color: #fff !important;
 		background: rgba(0,0,0,.5)!important;
 	}
-	z-index: 5;
 }
 @media (min-width: $screen-md-min) {
 	.navbar {
 		position: absolute;
 		right: 20px;
 		max-width: 600px;
+		background-color: transparent!important;
 		.container {
 			max-width: 100%;
 		}
