--- a/assets/scss/bootstrap/_variables.scss
+++ b/assets/scss/bootstrap/_variables.scss
@@ -24,7 +24,7 @@ $brand-danger:          #d9534f !default;
 $pink: 					#FF8C92;
 $yellow: 				#F6f07A;
 $chartreuse:			#b8b840;
-$lime: 					#bcd43d;
+$lime: 					#3c7e43;
 $sky: 					#62b6c4;
 $teal: 					#387d95;
 $blue: 					#16445c;
